@@ -31,7 +31,7 @@ requests on graphics and other content move to the forum
 
 (-) [GO] Olaf's van: all vikings can be inside but just Olaf can drive it;
     it only moves when it has enough fuel; it has attributes similar to Olaf
-    (vikings can stay on it's deck; monsters can't pass through it)
+    (vikings can stay on it's deck; monsters can't pass through it - really?)
 
 (-) Pulling
     (-) vikings can pull some objects
