@@ -11,6 +11,6 @@
     <map src="meadow_loc.xml"/>
     <script src="meadow_script.rb"/>
     <start horiz="250" vertic="499"/>
-    <exit horiz="2080" vertic="1040"/>
+    <exit horiz="2080" vertic="1021"/>
   </body>
 </location>
